--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 click this:
-lab1:    https://2024ossassignmet2806.netlify.app/form_nostyle.html
+lab1:   link="https://2024ossassignmet2806.netlify.app/form_nostyle.html"
 <br>
-lab2:    https://2024ossassignmet2806.netlify.app/form_style.html
+lab2:    link="https://2024ossassignmet2806.netlify.app/form_style.html"
 <br>
-lab3:    https://2024ossassignmet2806.netlify.app/form_js.html
+lab3:    link="https://2024ossassignmet2806.netlify.app/form_js.html"
 <br>
-lab4:    https://2024ossassignmet2806.netlify.app/form.html
+lab4:    link="https://2024ossassignmet2806.netlify.app/form.html"
