--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-click this:
-lab1:   link="https://2024ossassignmet2806.netlify.app/form_nostyle.html"
-<br>
-lab2:    link="https://2024ossassignmet2806.netlify.app/form_style.html"
-<br>
-lab3:    link="https://2024ossassignmet2806.netlify.app/form_js.html"
-<br>
-lab4:    link="https://2024ossassignmet2806.netlify.app/form.html"
+<p>lab1: <a href="https://2024ossassignmet2806.netlify.app/form_nostyle.html" target="_blank">lab1: Form without style!</a></p>
+<p>lab2: <a href="https://2024ossassignmet2806.netlify.app/form_style.html" target="_blank">lab2: Form with style!</a></p>
+<p>lab3: <a href="https://2024ossassignmet2806.netlify.app/form_js.html" target="_blank">lab3: Form with JavaScript!</a></p>
+<p>lab4: <a href="https://2024ossassignmet2806.netlify.app/form.html" target="_blank">lab4: Dynamic web page!</a></p>
