Position change(little)

--- a/form_js.html
+++ b/form_js.html
@@ -299,14 +299,16 @@
                 <input type="text" id="First_name" class="input_pair" name="first_name" placeholder value required>
                 <br>
                 <br>
+                <br>
                 <div class="feedback">
                     Vaild first name is required.</div>
             </div>
             <div style="float:right;width:50%">
                 <label for="Last_name">Last name</label>
                 <br>
-                <input type="text" id="Last_name" name="last_name" style="margin-bottom: 0%;" placeholder value
+                <input type="text" id="Last_name" name="last_name"  placeholder value
                     required>
+                <br>
                 <br>
                 <br>
                 <div class="feedback">
@@ -318,7 +320,7 @@
                 <br>
                 <div>
                     <div
-                        style="float:left;background-color:#E9ECEF; border:solid #6C757D 1px;width:30px;height:36px;text-align:center;vertical-align: bottom; border-radius:5px 0px 0px 5px;">
+                        style="float:left;background-color:#929496; border:solid #cdd1d4 1px;width:30px;height:31px;border-color:#848e97; text-align:center;padding-top: 6px; border-radius:5px 0px 0px 5px;">
                         @</div>
                     <div style="float:right;width:calc(100% - 31.6px);">
                         <input type="text" style="border-radius:0px 5px 5px 0px;" id="User_name" name="user_name"
