--- a/index.html
+++ b/index.html
@@ -1,4 +1,156 @@
-<p>lab1: <a href="https://2024ossassignmet2806.netlify.app/form_nostyle.html" target="_blank">lab1: Form without style!</a></p>
-<p>lab2: <a href="https://2024ossassignmet2806.netlify.app/form_style.html" target="_blank">lab2: Form with style!</a></p>
-<p>lab3: <a href="https://2024ossassignmet2806.netlify.app/form_js.html" target="_blank">lab3: Form with JavaScript!</a></p>
-<p>lab4: <a href="https://2024ossassignmet2806.netlify.app/form.html" target="_blank">lab4: Dynamic web page!</a></p>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <!--제목-->
+    <div class="float-start display-6">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpFWAivrIsqUnj8i8wdFxsP-fhywLRhY26RA&s"
+            style="width: 40px;">
+
+        CD rental shop
+
+    </div><br>
+    <!--버튼 라인-->
+    <div class="float-end">
+        <button type="button" class="btn btn-primary">add</button>
+        <button type="button" class="btn btn-secondary">delete</button>
+        <button type="button" class="btn btn-success">list</button>
+        <button type="button" class="btn btn-danger" style="margin:5px;">edit</button>
+    </div><br>
+
+    <!--영화CD 목록 만들기 10개 이상보이게!-->
+    <table class="table table-striped">
+        <tr>
+            <td class="col-1">#</td>
+            <td class="col-4">Title</td>
+            <td class="col-2">rate</td>
+            <td class="col-2">directer</td>
+            <td class="col-2">price</td>
+            <td class="col-2">janre</td>
+            <td class="col-2">nation</td>
+            <td class="col-2">state</td>
+
+        </tr>
+
+        <tr>
+            <td class="col-1">1</td>
+            <td class="col-4">기생충</td>
+            <td class="col-2">***</td>
+            <td class="col-2">봉준호</td>
+            <td class="col-2">3000</td>
+            <td class="col-2">가족</td>
+            <td class="col-2">한국</td>
+            <td class="col-2">불가</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">2</td>
+            <td class="col-4">인셉션</td>
+            <td class="col-2">*****</td>
+            <td class="col-2">크리스퍼 놀란</td>
+            <td class="col-2">3000</td>
+            <td class="col-2">판타지</td>
+            <td class="col-2">미국</td>
+            <td class="col-2">가능</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">3</td>
+            <td class="col-4">E.T</td>
+            <td class="col-2">***</td>
+            <td class="col-2">스티븐 스필버그</td>
+            <td class="col-2">2500</td>
+            <td class="col-2">가족</td>
+            <td class="col-2">미국</td>
+            <td class="col-2">가능</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">4</td>
+            <td class="col-4">극한 직업</td>
+            <td class="col-2">****</td>
+            <td class="col-2">이병헌</td>
+            <td class="col-2">3000</td>
+            <td class="col-2">시트콤</td>
+            <td class="col-2">한국</td>
+            <td class="col-2">불가</td>
+        </tr>
+        <tr>
+            <td class="col-1">5</td>
+            <td class="col-4">글래디에이터</td>
+            <td class="col-2">***</td>
+            <td class="col-2">리들리 스콧</td>
+            <td class="col-2">2000</td>
+            <td class="col-2">전쟁</td>
+            <td class="col-2">미국</td>
+            <td class="col-2">가능</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">6</td>
+            <td class="col-4">타이타닉</td>
+            <td class="col-2">*****</td>
+            <td class="col-2">제임스 카메론</td>
+            <td class="col-2">2000</td>
+            <td class="col-2">사랑</td>
+            <td class="col-2">미국</td>
+            <td class="col-2">불가</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">7</td>
+            <td class="col-4">세얼간이</td>
+            <td class="col-2">***</td>
+            <td class="col-2">라지쿠마르 히라니</td>
+            <td class="col-2">2500</td>
+            <td class="col-2">가족</td>
+            <td class="col-2">인도</td>
+            <td class="col-2">불가</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">8</td>
+            <td class="col-4">마더</td>
+            <td class="col-2">***</td>
+            <td class="col-2">봉준호</td>
+            <td class="col-2">1500</td>
+            <td class="col-2">추리</td>
+            <td class="col-2">한국</td>
+            <td class="col-2">가능</td>
+        </tr>
+        <tr>
+            <td class="col-1">9</td>
+            <td class="col-4">친절한 금자씨</td>
+            <td class="col-2">**</td>
+            <td class="col-2">박찬욱</td>
+            <td class="col-2">1500</td>
+            <td class="col-2">스릴러</td>
+            <td class="col-2">한국</td>
+            <td class="col-2">불가</td>
+        </tr>
+
+        <tr>
+            <td class="col-1">10</td>
+            <td class="col-4">라푼젤</td>
+            <td class="col-2">****</td>
+            <td class="col-2">바이런 하워드</td>
+            <td class="col-2">2000</td>
+            <td class="col-2">가족</td>
+            <td class="col-2">미국</td>
+            <td class="col-2">불가</td>
+        </tr>
+    </table>
+</body>
+
+</html>
