--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link href="./my.css" rel="stylesheet">
+
 </head>
 
 <body>
     <!--제목-->
     <div class="container">
-        <div class="float-start display-6">
+        <div class="display-6">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpFWAivrIsqUnj8i8wdFxsP-fhywLRhY26RA&s"
                 style="width: 40px;">
 
@@ -24,11 +26,9 @@
         </div><br>
         <!--버튼 라인-->
         <div class="float-end">
-            <button type="button" class="btn btn-primary" onclick="location.href='add.html'">add</button>
-            <button type="button" class="btn btn-secondary">delete</button>
-            <button type="button" class="btn btn-success">list</button>
-            <button type="button" class="btn btn-danger" style="margin:5px;">edit</button>
-        </div><br>
+            <button type="button" class="btn btn-primary" id="index_button"
+                onclick="location.href='add.html'">add</button>
+        </div>
 
         <!--영화CD 목록 만들기 10개 이상보이게!-->
         <table class="table table-striped">
@@ -44,115 +44,156 @@
 
             </tr>
 
-            <tr>
+
+            <tr class="list">
                 <td class="col-1">1</td>
-                <td class="col-4">기생충</td>
-                <td class="col-2">***</td>
-                <td class="col-2">봉준호</td>
-                <td class="col-2">3000</td>
-                <td class="col-2">가족</td>
-                <td class="col-2">한국</td>
-                <td class="col-2">불가</td>
+                <td class="col-4 Title view">기생충</td>
+                <td class="col-2 Rate">***</td>
+                <td class="col-2 Director">봉준호</td>
+                <td class="col-2 Price">3000</td>
+                <td class="col-2 Janre">가족</td>
+                <td class="col-2 Nation">한국</td>
+                <td class="col-2 State">불가</td>
             </tr>
 
-            <tr>
+            <tr class="list">
                 <td class="col-1">2</td>
-                <td class="col-4">인셉션</td>
-                <td class="col-2">*****</td>
-                <td class="col-2">크리스퍼 놀란</td>
-                <td class="col-2">3000</td>
-                <td class="col-2">판타지</td>
-                <td class="col-2">미국</td>
-                <td class="col-2">가능</td>
+                <td class="col-4 Title view">인셉션</td>
+                <td class="col-2 Rate">*****</td>
+                <td class="col-2 Director">크리스퍼 놀란</td>
+                <td class="col-2 Price">3000</td>
+                <td class="col-2 Janre">판타지</td>
+                <td class="col-2 Nation">미국</td>
+                <td class="col-2 State">가능</td>
             </tr>
 
-            <tr>
+            <tr class="list">
                 <td class="col-1">3</td>
-                <td class="col-4">E.T</td>
-                <td class="col-2">***</td>
-                <td class="col-2">스티븐 스필버그</td>
-                <td class="col-2">2500</td>
-                <td class="col-2">가족</td>
-                <td class="col-2">미국</td>
-                <td class="col-2">가능</td>
+                <td class="col-4 Title view">E.T</td>
+                <td class="col-2 Rate">***</td>
+                <td class="col-2 Director">스티븐 스필버그</td>
+                <td class="col-2 Price">2500</td>
+                <td class="col-2 Janre">가족</td>
+                <td class="col-2 Nation">미국</td>
+                <td class="col-2 State">가능</td>
             </tr>
 
-            <tr>
+            <tr class="list">
                 <td class="col-1">4</td>
-                <td class="col-4">극한 직업</td>
-                <td class="col-2">****</td>
-                <td class="col-2">이병헌</td>
-                <td class="col-2">3000</td>
-                <td class="col-2">시트콤</td>
-                <td class="col-2">한국</td>
-                <td class="col-2">불가</td>
+                <td class="col-4 Title view">극한 직업</td>
+                <td class="col-2 Rate">****</td>
+                <td class="col-2 Director">이병헌</td>
+                <td class="col-2 Price">3000</td>
+                <td class="col-2 Janre">시트콤</td>
+                <td class="col-2 Nation">한국</td>
+                <td class="col-2 State">불가</td>
             </tr>
-            <tr>
+
+            <tr class="list">
                 <td class="col-1">5</td>
-                <td class="col-4">글래디에이터</td>
-                <td class="col-2">***</td>
-                <td class="col-2">리들리 스콧</td>
-                <td class="col-2">2000</td>
-                <td class="col-2">전쟁</td>
-                <td class="col-2">미국</td>
-                <td class="col-2">가능</td>
+                <td class="col-4 Title view">글래디에이터</td>
+                <td class="col-2 Rate">***</td>
+                <td class="col-2 Director">리들리 스콧</td>
+                <td class="col-2 Price">2000</td>
+                <td class="col-2 Janre">전쟁</td>
+                <td class="col-2 Nation">미국</td>
+                <td class="col-2 State">가능</td>
             </tr>
 
-            <tr>
+            <tr class="list">
                 <td class="col-1">6</td>
-                <td class="col-4">타이타닉</td>
-                <td class="col-2">*****</td>
-                <td class="col-2">제임스 카메론</td>
-                <td class="col-2">2000</td>
-                <td class="col-2">사랑</td>
-                <td class="col-2">미국</td>
-                <td class="col-2">불가</td>
+                <td class="col-4 Title view">타이타닉</td>
+                <td class="col-2 Rate">*****</td>
+                <td class="col-2 Director">제임스 카메론</td>
+                <td class="col-2 Price">2000</td>
+                <td class="col-2 Janre">사랑</td>
+                <td class="col-2 Nation">미국</td>
+                <td class="col-2 State">불가</td>
             </tr>
 
-            <tr>
+            <tr class="list">
                 <td class="col-1">7</td>
-                <td class="col-4">세얼간이</td>
-                <td class="col-2">***</td>
-                <td class="col-2">라지쿠마르 히라니</td>
-                <td class="col-2">2500</td>
-                <td class="col-2">가족</td>
-                <td class="col-2">인도</td>
-                <td class="col-2">불가</td>
+                <td class="col-4 Title view">세얼간이</td>
+                <td class="col-2 Rate">***</td>
+                <td class="col-2 Director">라지쿠마르 히라니</td>
+                <td class="col-2 Price">2500</td>
+                <td class="col-2 Janre">가족</td>
+                <td class="col-2 Nation">인도</td>
+                <td class="col-2 State">불가</td>
             </tr>
 
-            <tr>
+            <tr class="list">
                 <td class="col-1">8</td>
-                <td class="col-4">마더</td>
-                <td class="col-2">***</td>
-                <td class="col-2">봉준호</td>
-                <td class="col-2">1500</td>
-                <td class="col-2">추리</td>
-                <td class="col-2">한국</td>
-                <td class="col-2">가능</td>
-            </tr>
-            <tr>
-                <td class="col-1">9</td>
-                <td class="col-4">친절한 금자씨</td>
-                <td class="col-2">**</td>
-                <td class="col-2">박찬욱</td>
-                <td class="col-2">1500</td>
-                <td class="col-2">스릴러</td>
-                <td class="col-2">한국</td>
-                <td class="col-2">불가</td>
+                <td class="col-4 Title view">마더</td>
+                <td class="col-2 Rate">***</td>
+                <td class="col-2 Director">봉준호</td>
+                <td class="col-2 Price">1500</td>
+                <td class="col-2 Janre">추리</td>
+                <td class="col-2 Nation">한국</td>
+                <td class="col-2 State">가능</td>
             </tr>
 
-            <tr>
-                <td class="col-1">10</td>
-                <td class="col-4">라푼젤</td>
-                <td class="col-2">****</td>
-                <td class="col-2">바이런 하워드</td>
-                <td class="col-2">2000</td>
-                <td class="col-2">가족</td>
-                <td class="col-2">미국</td>
-                <td class="col-2">불가</td>
+            <tr class="list">
+                <td class="col-1">9</td>
+                <td class="col-4 Title">친절한 금자씨</td>
+                <td class="col-2 Rate">**</td>
+                <td class="col-2 Director">박찬욱</td>
+                <td class="col-2 Price">1500</td>
+                <td class="col-2 Janre">스릴러</td>
+                <td class="col-2 Nation">한국</td>
+                <td class="col-2 State">불가</td>
             </tr>
+
+            <tr class="list">
+                <td class="col-1">10</td>
+                <td class="col-4 Title">라푼젤</td>
+                <td class="col-2 Rate">****</td>
+                <td class="col-2 Director">바이런 하워드</td>
+                <td class="col-2 Price">2000</td>
+                <td class="col-2 Janre">가족</td>
+                <td class="col-2 Nation">미국</td>
+                <td class="col-2 State">불가</td>
+            </tr>
+
         </table>
     </div>
+    <br><br><br>
+    <script>
+        // 'view' 클래스를 가진 모든 요소를 선택
+        let viewElements = document.getElementsByClassName('Title');
+        // 각 요소에 이벤트 리스너 추가
+        for (let i = 0; i < viewElements.length; i++) {
+            viewElements[i].addEventListener('click', function () {
+                location.href = 'view.html'; // 클릭 시 페이지 이동
+                let Title = this.innerText; // 영화 제목
+                let Rate = this.parentNode.querySelector('.Rate').innerText; // 영화 제목
+                let Director = this.parentNode.querySelector('.Director').innerText; // 감독 정보
+                let Price = this.parentNode.querySelector('.Price').innerText; // 감독 정보
+                let Janre = this.parentNode.querySelector('.Janre').innerText; // 감독 정보
+                let Nation = this.parentNode.querySelector('.Nation').innerText; // 감독 정보
+                let State = this.parentNode.querySelector('.State').innerText; // 감독 정보
+
+
+                sessionStorage.setItem('title', Title);
+                sessionStorage.setItem('rate', Rate);
+                sessionStorage.setItem('director', Director);
+                sessionStorage.setItem('price', Price);
+                sessionStorage.setItem('janre', Janre);
+                sessionStorage.setItem('nation', Nation);
+                sessionStorage.setItem('state', State);
+
+
+                location.href = 'view.html';
+
+
+            });
+
+
+
+
+
+        }
+    </script>
 </body>
 
 </html>
