--- a/edit.html
+++ b/edit.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="col-12">
-                <button class="btn btn-primary edit" type="submit" id="submited" onclick="confirm('수정하시겠습니까?')">확인</button>
+                <button class="btn btn-primary edit" type="submit" id="submited" onclick="confirm('게시물을 수정할까요?')">확인</button>
                 <button class="btn btn-primary edit" type="button" onclick="location.href='index.html'">취소</button>
             </div>
         </form>
